@@ -124,3 +124,8 @@ help.drag-the-skater=Drag the Skater
 help.right-click-for-options=Right Click for Options
 
 track.roller-coaster-mode=Roller-Coaster Mode
+
+pieChart=Pie Chart
+stickToTrack=Strick to Track
+off=Off
+on=On
