@@ -8,6 +8,7 @@ import edu.colorado.phet.common.piccolophet.nodes.ControlPanelNode;
 import edu.colorado.phet.common.piccolophet.nodes.PhetPPath;
 import edu.colorado.phet.common.piccolophet.nodes.PhetPText;
 import edu.colorado.phet.common.piccolophet.nodes.layout.VBox;
+import edu.colorado.phet.energyskatepark.EnergySkateParkStrings;
 import edu.colorado.phet.energyskatepark.view.EnergySkateParkSimulationPanel;
 import edu.umd.cs.piccolo.PNode;
 import edu.umd.cs.piccolox.pswing.PSwing;
@@ -27,7 +28,7 @@ public class TrackControlPanel extends PNode {
 
                           //Control box for track friction
                           new VBox( 0,
-                                    new PhetPText( "Track Friction", EnergySkateParkBasicsModule.TITLE_FONT ),
+                                    new PhetPText( EnergySkateParkStrings.getString( "controls.show-friction" ), EnergySkateParkBasicsModule.TITLE_FONT ),
                                     new OnOffPanel( module.frictionEnabled ),
                                     new PSwing( new TrackFrictionSlider( module ) ) ),
 
@@ -38,7 +39,7 @@ public class TrackControlPanel extends PNode {
 
                           //Control box for stickiness
                           new VBox( 0,
-                                    new PhetPText( "Stick to Track", EnergySkateParkBasicsModule.TITLE_FONT ),
+                                    new PhetPText( EnergySkateParkStrings.getString( "stickToTrack" ), EnergySkateParkBasicsModule.TITLE_FONT ),
                                     new OnOffPanel( module.stickToTrack ) ) ),
                 backgroundColor ) {{
 
